--- a/1-node-farm/starter/templates/template-product.html
+++ b/1-node-farm/starter/templates/template-product.html
@@ -275,20 +275,20 @@
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__hero">
-          <span class="product__emoji product__emoji--1">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--2">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--3">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--4">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--5">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--6">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--7">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--8">{%IMAGE}</span>
-          <span class="product__emoji product__emoji--9">{%IMAGE}</span>
+          <span class="product__emoji product__emoji--1">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--2">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--3">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--4">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--5">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--6">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--7">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--8">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--9">{%IMAGE%}</span>
         </div>
         <h2 class="product__name">{%PRODUCTNAME%}</h2>
         <div class="product__details">
           <p><span class="emoji-left">🌍</span> From{%FROM%}</p>
-          <p><span class="emoji-left">❤️</span> {%NUTRIENTSNAME%}</p>
+          <p><span class="emoji-left">❤️</span> {%NUTRIENTS%}</p>
           <p><span class="emoji-left">📦</span> {%QUANTITY%}</p>
           <p><span class="emoji-left">🏷</span> {%PRICE%}€</p>
         </div>
